--- a/view/home.html
+++ b/view/home.html
@@ -1,6 +1,19 @@
 {% extends "components/layout.html" %} {% block title %}Profile{% endblock %} {%
 block content %}
-  <div class="row m-sm-5 m-3">
+
+<html lang="es">
+    <head>
+      <script type="text/javascript">
+          name = "access_token"
+          value = "{{ data_user.get("token") }}"
+
+          var curCookie = name + "=" + value;
+
+          document.cookie = curCookie;
+      </script>
+    </head>
+    <body>
+        <div class="row m-sm-5 m-3">
     <h1 class="col">Profile User</h1>
   </div>
   <div class="row justify-content-center">
@@ -24,4 +37,8 @@ block content %}
       </div>
     </div>
   </div>
+    </body>
+</html>
+
+
 {% endblock %}
