--- a/view/components/header.html
+++ b/view/components/header.html
@@ -2,7 +2,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="register">Register</a>
+        <a class="navbar-brand" href="/register">Register</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -17,8 +17,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="login"
-                >login</a
+              <a class="nav-link active" aria-current="page" href="/login"
+                >Login</a
               >
             </li>
           </ul>
