--- a/view/reset_password.html
+++ b/view/reset_password.html
@@ -3,13 +3,19 @@
 {% block title %}Home{% endblock %}
 {% block content %}
   <div class="row m-sm-5 m-3">
-    <h1 class="col">Reset password</h1>
+    <h1 style="color:white" class="col">Reset password</h1>
   </div>
+
+  <style type="text/css">
+        body {
+          background-color: rgb(0, 28, 65);
+        }
+  </style>
 
   <section class="row justify-content-center">
     <form method="POST" action="/reset_password" class="col-sm-5 col-10">
       <div class="mb-3">
-        <label for="exampleInputUsername" class="form-label">New password</label>
+        <label for="exampleInputUsername" style="color:white" class="form-label">New password</label>
         <input
           name="new_password"
           type="password"
@@ -19,7 +25,7 @@
         />
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Repeat new password</label>
+        <label for="exampleInputPassword1" style="color:white" class="form-label">Repeat new password</label>
         <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required/>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
