Improve views, styles, fonts, etc

--- a/view/create_task.html
+++ b/view/create_task.html
@@ -23,10 +23,10 @@
         />
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" style="color:white" class="form-label">Difficult</label>
+        <label for="exampleInputPassword1" style="color:white" class="form-label">Difficulty</label>
         <input name="difficult" type="number" class="form-control" id="exampleInputPassword1" required/>
       </div>
-      <button type="submit" class="btn btn-primary">Crear</button>
+      <button type="submit" class="btn btn-primary">Create</button>
     </form>
   </section>
 {% endblock %}
