--- a/view/task_details.html
+++ b/view/task_details.html
@@ -45,6 +45,9 @@ block content %}
                 <form id="callback" name="callback" method="post">
                   <button class="btn btn-primary" type="submit">Finish task</button>
                 </form>
+                <form action="/create_new_task" method="get">
+                  <button class="btn btn-primary" type="submit">Create other task</button>
+                </form>
           </div>
     </div>
   </div>
