--- a/view/reset_password.html
+++ b/view/reset_password.html
@@ -28,7 +28,7 @@
         <label for="exampleInputPassword1" style="color:white" class="form-label">Repeat new password</label>
         <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required/>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Accept</button>
     </form>
   </section>
 {% endblock %}
