--- a/view/my_tasks.html
+++ b/view/my_tasks.html
@@ -8,16 +8,12 @@ block content %}
                 background-color: rgb(0, 28, 65);
             }
             .card {
-                margin-bottom: 1%;
+                margin-bottom: 2px;
             }
             .container {
-                  padding: 2%;
-                  display: flex;
-                  width: 100%;
-                  height: 100%;
-                  margin: auto;
-                  flex-wrap: wrap;
-                  justify-content: space-between;
+                  display: grid;
+                  gap: 1rem;
+                  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
             }
             .list-group-item {
                 font-family: "Lucida Console", "Courier New", monospace;
@@ -34,12 +30,13 @@ block content %}
                 var containerCreated = document.createElement("div");
                 containerCreated.classList.add("container");
                 containerCreated.id = 'con';
+                containerCreated.style.marginTop = "15px";
 
                 for (var i = 0; i < object.length; i++) {
 
                     var divCreated = document.createElement("div");
                     divCreated.classList.add("card", "col-5");
-                    divCreated.style.width = '23.5%';
+                    divCreated.style.width = 'fit-content';
                     divCreated.id = 'div';
 
                     var ulCreated = document.createElement("ul");
