--- a/view/login.html
+++ b/view/login.html
@@ -4,10 +4,13 @@
 {% block content %}
 <html lang="es">
     <head>
+      <script type="text/javascript">
+            document.cookie = "access_token" + "=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+      </script>
       <style type="text/css">
-              body {
-                background-color: rgb(0, 28, 65);
-              }
+          body {
+            background-color: rgb(0, 28, 65);
+          }
       </style>
     </head>
     <body>
