--- a/view/components/header.html
+++ b/view/components/header.html
@@ -17,9 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/login"
-                >Login</a
-              >
+              <a class="nav-link active" aria-current="page" href="/login">Login</a>
             </li>
           </ul>
         </div>
