--- a/view/my_tasks.html
+++ b/view/my_tasks.html
@@ -22,6 +22,24 @@ block content %}
         </style>
         <script>
             window.onload = function() {
+                var cookies = document.cookie;
+                var cookiesArray = cookies.split(";");
+                var token = null;
+
+                for(var i = 0; i < cookiesArray.length; i++) {
+                  var cookie = cookiesArray[i].trim();
+                  if(cookie.indexOf("access_token=") == 0) {
+                    token = cookie.substring("access_token=".length, cookie.length);
+                    break;
+                  }
+                }
+
+                const formElement = document.getElementById('goHome');
+                const newUrl = '/home/redirect/'+ token;
+                formElement.action = newUrl;
+
+                var header = document.getElementsByTagName('header')[0];
+                header.parentNode.removeChild(header);
 
                 var json = "{{data_task}}"
                 var object = JSON.parse(json.replace(/&#(\d+);/g, function(match, dec) {
@@ -59,6 +77,27 @@ block content %}
         </script>
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-light">
+              <div class="container-fluid">
+                <form id="goHome" method="GET" action="/home">
+                  <input type="hidden" name="data" value="some_data">
+                  <button type="submit" class="navbar-brand">Home</button>
+                </form>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+            </nav>
+        </header>
     </body>
 </html>
 
