--- a/view/create_task.html
+++ b/view/create_task.html
@@ -2,31 +2,40 @@
 
 {% block title %}Home{% endblock %}
 {% block content %}
-  <div class="row m-sm-5 m-3">
-    <h1 style="color:white" class="col">Create task</h1>
-  </div>
-  <style type="text/css">
-          body {
-            background-color: rgb(0, 28, 65);
-          }
-  </style>
-  <section class="row justify-content-center">
-    <form method="POST" action="/create_task" class="col-sm-5 col-10">
-      <div class="mb-3">
-        <label for="exampleInputUsername" style="color:white" class="form-label">Description</label>
-        <input
-          name="description"
-          type="text"
-          class="form-control"
-          id="exampleInputUsername"
-          required
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" style="color:white" class="form-label">Difficulty</label>
-        <input name="difficult" type="number" class="form-control" id="exampleInputPassword1" required/>
-      </div>
-      <button type="submit" class="btn btn-primary">Create</button>
-    </form>
-  </section>
+
+<html lang="es">
+    <head>
+        <script type="text/javascript">
+            var header = document.getElementsByTagName('header')[0];
+            header.parentNode.removeChild(header);
+        </script>
+        <style type="text/css">
+            body {
+              background-color: rgb(0, 28, 65);
+            }
+        </style>
+    </head>
+        <div class="row m-sm-5 m-3">
+          <h1 style="color:white" class="col">Create task</h1>
+        </div>
+        <section class="row justify-content-center">
+          <form method="POST" action="/create_task" class="col-sm-5 col-10">
+            <div class="mb-3">
+              <label for="exampleInputUsername" style="color:white" class="form-label">Description</label>
+              <input
+                name="description"
+                type="text"
+                class="form-control"
+                id="exampleInputUsername"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" style="color:white" class="form-label">Difficulty</label>
+              <input name="difficult" type="number" class="form-control" id="exampleInputPassword1" required/>
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
+          </form>
+        </section>
+</html>
 {% endblock %}
