--- a/view/reset_password.html
+++ b/view/reset_password.html
@@ -5,35 +5,100 @@
 
     <head>
         <script type="text/javascript">
-          var header = document.getElementsByTagName('header')[0];
-          header.parentNode.removeChild(header);
+            window.onload = function() {
+                var header = document.getElementsByTagName('header')[0];
+                header.parentNode.removeChild(header);
+                setInterval(() => {
+                  homeButton.classList.toggle('vibrate');
+                }, 1500);
+
+                var cookies = document.cookie;
+                var cookiesArray = cookies.split(";");
+                var token = null;
+
+                for(var i = 0; i < cookiesArray.length; i++) {
+                  var cookie = cookiesArray[i].trim();
+                  if(cookie.indexOf("access_token=") == 0) {
+                    token = cookie.substring("access_token=".length, cookie.length);
+                    break;
+                  }
+                }
+
+                const formElement = document.getElementById('goHome');
+                const newUrl = '/home/redirect/'+ token;
+                formElement.action = newUrl;
+            }
         </script>
         <style type="text/css">
           body {
             background-color: rgb(0, 28, 65);
           }
+          #homeButton {
+                font-size: 35px;
+                color: rgb(0, 28, 65);
+                border: none;
+                background-color: transparent;
+                padding: 0;
+          }
+
+          @keyframes vibrate {
+              0% { transform: translateX(0); }
+              25% { transform: translateX(-1px) rotate(-3deg); }
+              50% { transform: translateX(0) rotate(3deg); }
+              75% { transform: translateX(1px) rotate(-3deg); }
+              100% { transform: translateX(0); }
+          }
+          .vibrate {
+              animation: vibrate .3s ease-in-out infinite;
+          }
         </style>
     </head>
-    <div class="row m-sm-5 m-3">
-      <h1 style="color:white" class="col">Reset password</h1>
-    </div>
-      <section class="row justify-content-center">
-        <form method="POST" action="/reset_password" class="col-sm-5 col-10">
-          <div class="mb-3">
-            <label for="exampleInputUsername" style="color:white" class="form-label">New password</label>
-            <input
-              name="new_password"
-              type="password"
-              class="form-control"
-              id="exampleInputUsername"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" style="color:white" class="form-label">Repeat new password</label>
-            <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required/>
-          </div>
-          <button type="submit" class="btn btn-primary">Accept</button>
-        </form>
-      </section>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-light">
+              <div class="container-fluid">
+                <form id="goHome" method="GET" action="/home">
+                  <button id="homeButton" class="vibrate">
+                      <span class="fas fa-house-user"
+                            aria-hidden="true">
+                      </span>
+                  </button>
+                </form>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              </div>
+            </nav>
+        </header>
+        <div class="row m-sm-5 m-3">
+          <h1 style="color:white" class="col">Reset password</h1>
+        </div>
+          <section class="row justify-content-center">
+             <form method="POST" action="/reset_password" class="col-sm-5 col-10">
+               <div class="mb-3">
+                 <label for="exampleInputUsername" style="color:white" class="form-label">New password</label>
+                 <input
+                   name="new_password"
+                   type="password"
+                   class="form-control"
+                   id="exampleInputUsername"
+                   required
+                 />
+               </div>
+               <div class="mb-3">
+                 <label for="exampleInputPassword1" style="color:white" class="form-label">Repeat new password</label>
+                 <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required/>
+               </div>
+               <button type="submit" class="btn btn-primary">Accept</button>
+             </form>
+          </section>
+    </body>
 {% endblock %}
