Add current pass validation fild and rabbitmq

--- a/view/reset_password.html
+++ b/view/reset_password.html
@@ -81,24 +81,20 @@
         <div class="row m-sm-5 m-3">
           <h1 style="color:white" class="col">Reset password</h1>
         </div>
-          <section class="row justify-content-center">
-             <form method="POST" action="/reset_password" class="col-sm-5 col-10">
-               <div class="mb-3">
-                 <label for="exampleInputUsername" style="color:white" class="form-label">New password</label>
-                 <input
-                   name="new_password"
-                   type="password"
-                   class="form-control"
-                   id="exampleInputUsername"
-                   required
-                 />
-               </div>
-               <div class="mb-3">
-                 <label for="exampleInputPassword1" style="color:white" class="form-label">Repeat new password</label>
-                 <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required/>
-               </div>
-               <button type="submit" class="btn btn-primary">Accept</button>
-             </form>
-          </section>
+        <section class="row justify-content-center">
+          <form method="POST" action="/reset_password" class="col-sm-5 col-10">
+            <div class="mb-3">
+              <input name="current_password" type="password" class="form-control" id="exampleInputPassword2" required placeholder="Current password"/>
+            </div>
+            <div class="mb-3">
+              <input name="new_password" type="password" class="form-control" id="exampleInputUsername" required placeholder="New password"/>
+            </div>
+            <div class="mb-3">
+              <input name="repeat_new_password" type="password" class="form-control" id="exampleInputPassword1" required placeholder="Repeat new password"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Accept</button>
+          </form>
+        </section>
+
     </body>
 {% endblock %}
