--- a/view/login.html
+++ b/view/login.html
@@ -35,6 +35,11 @@
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
+        <div class="d-flex flex-column align-items-center">
+          <form action="/forgot_password_form" class="col-sm-5 col-10" style="margin-left:11px; margin-top:10px;">
+            <button type="submit" class="btn btn-primary">Forgot password</button>
+          </form>
+        </div>
       </section>
     </body>
 {% endblock %}
