--- a/view/code_sent.html
+++ b/view/code_sent.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5; url=http://0.0.0.0:5000/login">
-    <title>Bad password</title>
+    <title>Code sent</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
   <style>
     body {
     background: #e5e5e5 url('background.jpg') no-repeat center center fixed;
@@ -22,6 +22,7 @@
         background: rgba(255, 255, 255, 0.8);
         border-radius: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        display: flex;
     }
 
     h1 {
@@ -36,12 +37,21 @@
         margin-bottom: 30px;
     }
 
+    .icon-container {
+      margin-right: 10px;
+    }
+
   </style>
 </head>
 <body>
     <div class="container">
-        <h1>¡Oops!</h1>
-        <p>{{ error }}</p>
+      <div class="icon-container">
+        <i class="fas fa-check-circle" style="font-size: 50px; margin-top: 65px; color: green;"></i>
+      </div>
+      <div>
+        <h1>¡Code successfully sent to your email!</h1>
+        <p>If you don't receive the 4 digit code, click on 'send again' or check your spam section.</p>
+      </div>
     </div>
 </body>
 </html>
