--- a/view/error.html
+++ b/view/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3; url=http://0.0.0.0:5000/login">
-    <title>Bad password</title>
+    <title>Error</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
   <style>
     body {
     background: #e5e5e5 url('background.jpg') no-repeat center center fixed;
@@ -37,11 +37,36 @@
     }
 
   </style>
+
 </head>
 <body>
     <div class="container">
+        <div class="icon">
+          <i class="fas fa-exclamation-circle" style="font-size: 64px; margin-bottom: 10px; color: #ff4d4f;"></i>
+        </div>
         <h1>¡Oops!</h1>
         <p>{{ error }}</p>
+        <p>Redirecting in <span id="count">3</span> seconds...</p>
     </div>
 </body>
+
+    <script type="text/javascript">
+
+        var seconds = 3;
+        var countElement = document.getElementById('count');
+
+        function refreshCount() {
+          countElement.textContent = seconds;
+
+          if (seconds <= 0) {
+            clearTimeout(timer);
+            window.location.href = document.referrer;
+          } else {
+            seconds--;
+            timer = setTimeout(refreshCount, 1000);
+          }
+        }
+
+        var timer = setTimeout(refreshCount, 1000);
+    </script>
 </html>
