--- a/view/forgot_password.html
+++ b/view/forgot_password.html
@@ -17,7 +17,7 @@
         <section class="row justify-content-center">
           <form method="POST" action="/send_email_forgot_password" class="col-sm-5 col-10">
             <div class="mb-3">
-              <input name="email" type="text" class="form-control" id="InputEmail" required placeholder="Email to send code"/>
+              <input name="email" type="text" class="form-control" id="InputEmail" required placeholder="Enter your account email"/>
             </div>
             <button type="submit" class="btn btn-primary">Send code</button>
           </form>
