--- a/view/register.html
+++ b/view/register.html
@@ -1,52 +1,119 @@
-{% extends "components/layout.html" %}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign up</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <style>
+      body {
+        background: linear-gradient(135deg, #4e54c8, #8f94fb, #4e54c8);
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
+      }
 
-{% block title %}Sign up{% endblock %}
-{% block content %}
-  <html lang="es">
-    <head>
-      <style type="text/css">
-              body {
-                background-color: rgb(0, 28, 65);
-              }
-      </style>
-    </head>
-    <body>
-  <div class="row m-md-5 m-3">
-    <h1 style="color:white" class="col">Sign up</h1>
-  </div>
+      .custom-container {
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+        max-width: 50%;
+        margin: 0 30px;
+      }
 
-  <form method="POST" action="/signup" class="row g-3 mx-sm-5 mx-2">
-    <div class="col-md-4">
-      <label style="color:white" for="validationDefault02" class="form-label">Email</label>
-      <input name="email" type="text" class="form-control" id="validationDefault02" required />
+      h1 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: #333;
+      }
+
+      h5 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: white;
+      }
+
+      .form-label {
+        color: #333;
+      }
+
+      .btn-register {
+        background-color: #4e54c8;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 16px;
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .btn-register:hover {
+        background-color: #333;
+      }
+
+      .btn-login {
+        background-color: #6ab04c; /* Cambiar a color verde */
+        color: white;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 16px;
+        font-size: 1.2rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .btn-login:hover {
+        background-color: #4e8543; /* Color de fondo más oscuro al pasar el cursor */
+      }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="custom-container mx-auto">
+      <form method="POST" action="/signup" class="row g-3">
+        <div class="col-12">
+          <label for="validationDefault02" class="form-label">Email</label>
+          <input name="email" type="text" class="form-control" id="validationDefault02" required />
+        </div>
+        <div class="col-12">
+          <label for="validationDefaultUsername" class="form-label">Username</label>
+          <div class="input-group">
+              <input
+                  name="username"
+                  type="text"
+                  class="form-control"
+                  id="validationDefaultUsername"
+                  aria-describedby="inputGroupPrepend2"
+                  required
+              />
+          </div>
+        </div>
+        <div class="col-12">
+          <label for="validationDefault05" class="form-label">Password</label>
+          <input
+            name="password_user"
+            type="password"
+            class="form-control"
+            id="validationDefault05"
+            required
+          />
+        </div>
+        <div class="col-12 text-center"> <!-- Agregar la clase text-center aquí -->
+          <button class="btn-register" type="submit">Register</button>
+        </div>
+      </form>
     </div>
-    <div class="col-md-4">
-      <label style="color:white" for="validationDefaultUsername" class="form-label">Username</label>
-      <div class="input-group">
-        <span class="input-group-text" id="inputGroupPrepend2">@</span>
-        <input
-          name="username"
-          type="text"
-          class="form-control"
-          id="validationDefaultUsername"
-          aria-describedby="inputGroupPrepend2"
-          required
-        />
+    <div class="text-center mt-3">
+        <br>
+        <h5>¿Ya tienes una cuenta?</h5>
+        <a class="btn btn-login" href="/login">Login</a>
       </div>
-    </div>
-    <div class="col-md-3">
-      <label style="color:white" for="validationDefault05" class="form-label">Password</label>
-      <input
-        name="password_user"
-        type="password"
-        class="form-control"
-        id="validationDefault05"
-        required
-      />
-    </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Register</button>
-    </div>
-  </form>
-  </body>
-{% endblock %}
+  </div>
+</body>
+</html>
