--- a/view/login.html
+++ b/view/login.html
@@ -1,45 +1,83 @@
-{% extends "components/layout.html" %}
-
-{% block title %}Home{% endblock %}
-{% block content %}
+<!DOCTYPE html>
 <html lang="es">
-    <head>
-      <script type="text/javascript">
-            document.cookie = "access_token" + "=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-      </script>
-      <style type="text/css">
-          body {
-            background-color: rgb(0, 28, 65);
-          }
-      </style>
-    </head>
-    <body>
-      <div class="row m-sm-5 m-3">
-        <h1 style="color:white" class="col">Login</h1>
-      </div>
-      <section class="row justify-content-center">
-        <form method="POST" action="/home" class="col-sm-5 col-10">
-          <div class="mb-3">
-            <label style="color:white" for="exampleInputUsername" class="form-label">Email</label>
-            <input
-              name="email"
-              type="text"
-              class="form-control"
-              id="exampleInputUsername"
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label style="color:white" for="exampleInputPassword1" class="form-label">Password</label>
-            <input name="password_user" type="password" class="form-control" id="exampleInputPassword1" required/>
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-        <div class="d-flex flex-column align-items-center">
-          <form action="/forgot_password_form" class="col-sm-5 col-10" style="margin-left:11px; margin-top:10px;">
-            <button type="submit" class="btn btn-primary">Forgot password</button>
-          </form>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
+  <style>
+    body {
+      background: linear-gradient(135deg, #4e54c8, #8f94fb, #4e54c8);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .login-container {
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+      max-width: 400px;
+      margin: auto;
+      padding: 40px; /* Aumentado el padding para un aspecto más espacioso */
+      margin-top: 20px;
+      background-color: white; /* Fondo blanco */
+    }
+
+    .login-title {
+      text-align: center;
+      color: #4e54c8; /* Cambio de color del título */
+    }
+
+    .form-label {
+      color: #4e54c8; /* Color del texto de las etiquetas */
+    }
+
+    .btn-primary {
+      background-color: #4e54c8; /* Cambio de color del botón */
+      border-color: #4e54c8; /* Cambio de color del borde del botón */
+    }
+
+    .btn-primary:hover {
+      background-color: #2e2f83; /* Cambio de color al pasar el ratón sobre el botón */
+      border-color: #2e2f83; /* Cambio de color del borde al pasar el ratón sobre el botón */
+    }
+
+    .forgot-password {
+      text-align: right;
+    }
+
+    .forgot-password a {
+      color: #4e54c8; /* Cambio de color del enlace de "Forgot password?" */
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="login-container">
+      <h1 class="login-title">Login</h1>
+      <form method="POST" action="/home">
+        <div class="mb-3">
+          <label for="exampleInputUsername" class="form-label">Email</label>
+          <input
+            name="email"
+            type="email"
+            class="form-control"
+            id="exampleInputUsername"
+            required
+          />
         </div>
-      </section>
-    </body>
-{% endblock %}
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input name="password_user" type="password" class="form-control" id="exampleInputPassword1" required />
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+      </form>
+      <div class="forgot-password">
+        <a href="/forgot_password_form">Forgot password?</a>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
