--- a/view/register.html
+++ b/view/register.html
@@ -18,7 +18,7 @@
     }
 
     .custom-container {
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: white; /* Fondo blanco */
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
@@ -29,11 +29,11 @@
 
     h1, h6 {
       text-align: center;
-      color: #333; /* Color de texto ajustado */
+      color: #4e54c8;
     }
 
     .form-label {
-      color: #333;
+      color: #4e54c8;
     }
 
     .btn-register, .btn-login {
